<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Registro">

    <TextView
    android:gravity="center"
    android:text="@string/r_Usuario"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textSize="20sp">
    </TextView>
    <EditText
        android:id="@+id/r_Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/rNombre">
    </EditText>
    <EditText
        android:id="@+id/r_Usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/rUsuario">
    </EditText>
    <EditText
        android:id="@+id/r_Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/rContraseña">
    </EditText>
    <EditText
        android:id="@+id/r_Edad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/rEdad">
    </EditText>
    <Button
        android:id="@+id/r_Button"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registrar">
    </Button>

</LinearLayout>